--- a/journal/201905.md
+++ b/journal/201905.md
@@ -8,7 +8,7 @@
 
 ## Development
 
-{add below overview of activity for each project. add any other project that warranets a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans}
+{add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans}
 
 [dcrd](https://github.com/decred/dcrd): {}
 
@@ -36,7 +36,7 @@ Merged:
 * Add context to RPC method handlers: https://github.com/decred/dcrwallet/pull/1457 (important?)
 * Return early with context error from spv rescan. https://github.com/decred/dcrwallet/pull/1456 (bug fix) 
 * Require ticket price limit configs to be non-zero to apply: https://github.com/decred/dcrwallet/pull/1454 (bug fix)
-* Add errors.Cause to find inital cause of error: https://github.com/decred/dcrwallet/pull/1453 (meta bug fixing? i.e. bug feature?)
+* Add errors. Cause to find initial cause of error: https://github.com/decred/dcrwallet/pull/1453 (meta bug fixing? i.e. bug feature?)
 * Lock selected previous outputs for concurrent UTXO selection: https://github.com/decred/dcrwallet/pull/1452 (possibly important??)
 * Replace wallet locking management goroutine with mutexes: https://github.com/decred/dcrwallet/pull/1451 (possibly a relevant feature we should describe in high-level terms that make sense to user)
 * Bump to wallet/v1.2.3: https://github.com/decred/dcrwallet/pull/1449 (just looks like changing the version numbers, but do we have an actual minor version bump to announce?)
@@ -109,7 +109,7 @@ Dev activity stats for May: {} active PRs, {} master commits, {} added and {} de
 
 ## People
 
-Welcome to new first time contributors with code merged to master branches: duyenemdo [dcrandroid](https://github.com/decred/dcrandroid/commit/dec2542ebdf0485acc52e00091ad3ee4b205155a), njirap [dcrdata](https://github.com/decred/dcrdata/commit/796bd32f3b0c18c84a06bd04d2be478c6815e9d2),  Nelson Dornelas Jr [politeiagui](https://github.com/decred/politeiagui/commit/62a2903d01e2ebac2bd203abb5e1347262b47999), Youssef Boukenken [dcrtime](https://github.com/decred/dcrtime/commit/d6f4a5134c7ca78c3c2b2a849ad9c74de064656e) and DominicTing [dcrweb](https://github.com/decred/dcrweb/commit/090c431cdeceab6ce5077fcfaa6c85c3757a4018)
+Welcome to new first time contributors with code merged to master branches: duyenemdo ([dcrandroid](https://github.com/decred/dcrandroid/commit/dec2542ebdf0485acc52e00091ad3ee4b205155a)), njirap ([dcrdata](https://github.com/decred/dcrdata/commit/796bd32f3b0c18c84a06bd04d2be478c6815e9d2)),  Nelson Dornelas Jr ([politeiagui](https://github.com/decred/politeiagui/commit/62a2903d01e2ebac2bd203abb5e1347262b47999)), Youssef Boukenken ([dcrtime](https://github.com/decred/dcrtime/commit/d6f4a5134c7ca78c3c2b2a849ad9c74de064656e)) and DominicTing ([dcrweb](https://github.com/decred/dcrweb/commit/090c431cdeceab6ce5077fcfaa6c85c3757a4018))
 
 ## Governance
 
@@ -152,7 +152,7 @@ Staking: 30-day average ticket price was 116 DCR (-{1.2}) per dcrstats.com. The 
 
 {Should we mention no more node stats for the foreseeable future?}
 
-Soon after the activation of the new consensus rules there was a [transaction](https://twitter.com/RichardRed0x/status/1127280791002787843) that made use of the new rules, the nodes that did not recognize this got forked off. We had stedy stream of people dropping by on the support channels throughout the month as many of their wallets stopped syncing. There was no major network level outage observed. 
+Soon after the activation of the new consensus rules, there was a [transaction](https://twitter.com/RichardRed0x/status/1127280791002787843) that made use of the new rules, the nodes that did not recognize this got forked off. We had a steady stream of people dropping by on the support channels throughout the month as many of their wallets stopped syncing. There was no major network level outage observed. 
 
 ## Mining
 
@@ -164,7 +164,7 @@ A very prominent mining pool ViaBTC [announced](https://pool.viabtc.com/announce
 
 Exchange integrations:
 
-Vertbase has [announced](https://twitter.com/vertbase/status/1123999345571958784) the availability of GBP<>DCR exchange pairs for UK residents {this already witten about last journal, repeat ? }
+Vertbase has [announced](https://twitter.com/vertbase/status/1123999345571958784) the availability of GBP<>DCR exchange pairs for UK residents {this already written about in the last journal, repeat? }
 
 HitBTC exchange [added](https://twitter.com/hitbtc/status/1128226645280788480) DCR/BTC, DCR/ETH and DCR/USDTT pairs. Thank you [@Haon](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$15574863598649nkfEE:decred.org) for getting us in without any listing fees. 
 
@@ -176,9 +176,9 @@ Wallets:
 
 [Ownbit](https://twitter.com/bitbillwallet/status/1126659323893968896) added support for DCR on their mobile wallet. 
 
-{Subheading:?}
+{Subheading:? Move to Adoption?}
 
-ADHOC a company that focuses on privacy and related hardware [announced](https://twitter.com/adhoc_zone/status/1126653081259839488) that they accept DCR in their payment gateway.
+ADHOC a company that focuses on privacy and related hardware [announced](https://twitter.com/adhoc_zone/status/1126653081259839488) that they accept DCR as a payment method.
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -195,7 +195,7 @@ https://www.reddit.com/r/decred/comments/bp035s/decred_accepted_here_the_list_of
 {investment adoption}
 
 ## Outreach
-Decred was intensely busy in May laying the groundwork for a more decentralized operational rollout. Much of the work in May was focused in and around NYC Blockchain Week, where approximately fifteen community members got together with an extended group of exchanges, miners, institutional partners, and more. An Africa Telegram group (Decred Africa) was launched and coordinated a presentation at Blockchain Nigeria is Lagos on May 24th. In NYC, various community members attended the Magical Crypto Conference May 10-11, then Consensus the following three days. At Consensus, Jake presented a 30 minute update on Decred's funding and roadmap at their Changelogs track. Additionally, Jake spoke later that day at Ditto PR & The Block's first ever conference, AtomicSwap. Jake was on a panel with Beam, DASH and Orbs, and debated decentralization and governance with the other representatives. Decred coordinated a dinner with members of its Asian community and determined a strategy to penetrate the Asian market, prioritizing China in the immediate term. Dominic and Hugo are planning an event in partnership with Blockbeats, a major crypto media player, to promote and host a meetup in Beijing in the near future.
+Decred was intensely busy in May laying the groundwork for a more decentralized operational rollout. Much of the work in May was focused in and around NYC Blockchain Week, where approximately fifteen community members got together with an extended group of exchanges, miners, institutional partners, and more. An Africa Telegram group (Decred Africa) was launched and coordinated a presentation at Blockchain Nigeria is Lagos on May 24th. In NYC, various community members attended the Magical Crypto Conference on May 10-11, then Consensus the following three days. At Consensus, Jake presented a 30 minute update on Decred's funding and roadmap at their Changelogs track. Additionally, Jake spoke later that day at Ditto PR & The Block's first ever conference, AtomicSwap. Jake was on a panel with Beam, DASH and Orbs, and debated decentralization and governance with the other representatives. Decred coordinated a dinner with members of its Asian community and determined a strategy to penetrate the Asian market, prioritizing China in the immediate term. Dominic and Hugo are planning an event in partnership with Blockbeats, a major crypto media player, to promote and host a meetup in Beijing in the near future.
 
 Anshawblack traveled to New York for NYC Blockchain week and recorded podcasts with JZ, Murad Madhudov, Joel Monegro, Luke Powell, Jamie Holdstock, and Permabull Nino. The first podcast with JZ will release June 1st, with others to follow.
 
@@ -321,7 +321,7 @@ Intel Speculative execution multiple vulnerabilities
 
 EOS Block Producers [burned](https://www.reddit.com/r/eos/comments/bm75ih/the_mainnet_34m_eos_accumulated_4_inflation_is/) 34 million EOS (~$272 million) from the eosio.saving account. These funds had accumulated from the 4% inflation which was to be used to fund project development through a [Worker Proposal System](https://medium.com/eosys/eos-worker-proposal-system-announcement-6addcfb0134c). This idea fell out of favor with the EOS BPs and community, and 15 BPs supported the proposal to burn accumulated savings [on](https://www.eosx.io/tx/26ca16319febafc0942a8c6e3be26c16b84846b7cfe5f6ade906a0b86a6c2bb7?listView=actions) May 8. New tokens are still accumulating in the savings account, but this seems likely to be removed as there is an open [referendum](https://eosauthority.com/polls_details?proposal=inflation_20190307&prev=search) to remove the 4% inflation for development entirely, which has almost unanimous support from around 2.7% of EOS tokens that have voted.
 
-Zooko [commented](https://forum.zcashcommunity.com/t/the-future-of-zcash-in-the-year-2020/32372/173) on a long-running discussion about the future of Zcash development to express support for a new dev fund. Zcash currently allocates 20% of the block rewards to a founders reward but this is due to end some time in 2020. Zooko and many other advocates think the new dev fund needs to be more decentralized than the current setup of relying on the Electronic Coin Company.
+Zooko [commented](https://forum.zcashcommunity.com/t/the-future-of-zcash-in-the-year-2020/32372/173) on a long-running discussion about the future of Zcash development to express support for a new dev fund. Zcash currently allocates 20% of the block rewards to a founders reward but this is due to end sometime in 2020. Zooko and many other advocates think the new dev fund needs to be more decentralized than the current setup of relying on the Electronic Coin Company.
 
 Tezos Athens upgrade [activated](https://www.coindesk.com/in-first-tezos-blockchain-activates-upgrade-by-token-holder-voting) on May 30, marking the end of a process that began in February to select a proposal, endorse it, test it and activate it. One of the lesser discussed aspects of the protocol upgrade was the [generation](https://twitter.com/wisercharlie/status/1134240285238501376) of 100 new XTZ to be claimed by the upgrade's developers for a round of drinks. This has been described as a method of [funding development](https://medium.com/tocqueville-group/why-tezos-is-the-best-platform-for-tokenized-assets-89a960cfa828) in future, with the developers who make a protocol change proposal incorporating the generation of new XTZ which they can claim as a reward for their work.
 
@@ -329,7 +329,7 @@ Dash [Ventures](https://blog.dash.org/introducing-the-dash-investment-foundation
 
 The [Open Money Initiative](https://medium.com/@openmoneyinitiative/announcing-the-open-money-initiative-61422b58ad06) was announced, a research nonprofit which will study how money is used in closed economies with collapsing monetary systems. The initiative's first project is an ethnographic study in Venezuela. The initiative is supported by funding from Zcash, Stellar, Tezos and the Cosmos supported Interchain Foundation - among others.
 
-A Bitcoin Cash hard fork on May 15 was beset by [several](https://blog.bitmex.com/the-bitcoin-cash-hardfork-three-interrelated-incidents/) issues and in the ensuing chaos 3,391 BCH (~$1.35 million) were double spent. A bug with Bitcoin ABC led to invalid transactions filling up the mempool and a series of empty blocks being mined. Some miners began mining blocks on the pre-hardfork chain, causing a chain split. Immediately after the bug was resolved, a 2 block reorg occurred in which funds that the hardfork made spendable by any miners were double spent. It seems likely the dominant BCH miners reorged the chain to remove transactions in which these coins were claimed by another miner.
+A Bitcoin Cash hard fork on May 15 was beset by [several](https://blog.bitmex.com/the-bitcoin-cash-hardfork-three-interrelated-incidents/) issues and in the ensuing chaos, 3,391 BCH (~$1.35 million) were double spent. A bug with Bitcoin ABC led to invalid transactions filling up the mempool and a series of empty blocks being mined. Some miners began mining blocks on the pre-hardfork chain, causing a chain split. Immediately after the bug was resolved, a 2 block reorg occurred in which funds that the hardfork made spendable by any miners were double spent. It seems likely the dominant BCH miners reorged the chain to remove transactions in which these coins were claimed by another miner.
 
 Poloniex has been busy in May, delisting [Peercoin](https://talk.peercoin.net/t/team-update-28-poloniex-delisting-legal-risks-memo-exchange-expansion-plans/9278) and a number of other cryptocurrencies, "[geofencing](https://medium.com/circle-trader/poloniex-to-stop-offering-trading-of-9-assets-to-us-customers-all-assets-remain-available-to-b4c5703c0e9)" DCR and 8 other cryptocurrencies so that US-based customers cannot trade it, and   [announcing](https://medium.com/circle-trader/cosmos-atom-staking-is-coming-to-poloniex-d587d6c6615d) support for Cosmos staking. The decision to geofence DCR on the basis of regulatory uncertainty is perplexing, given the many [reasons](https://www.reddit.com/r/decred/comments/ahuawl/decred_launch_security_laws/eeiaa0n/) why DCR should not be considered a security and concurrent support for ICO projects that seem more likely to be deemed securities. In a follow up [post](https://blog.circle.com/2019/05/20/us-crypto-policy-needs-to-change/), Circle CEO explained that the move is triggered by the [recent guidance](https://www.sec.gov/news/public-statement/statement-framework-investment-contract-analysis-digital-assets) from the SEC. Notably, the linked page says "This framework represents Staff views and is not a rule, regulation, or statement of the Commission.  The Commission has neither approved nor disapproved its content. This framework, like other Staff guidance, is not binding on the Divisions or the Commission.". Another [post](https://blog.circle.com/2019/05/23/our-take-interpreting-recent-signals-from-us-regulatory-agencies/) from Circle further elaborated on their position and complained about the difficulties caused by uncertainty from US regulators.
 
@@ -360,7 +360,7 @@ Firefox users went through a frustrating experience of software that worked yest
 
 ## About This Issue
 
-This is issue 14 of Decred Journal. Index of all issues, mirrors and translations is available [here](https://xaur.github.io/decred-news/).
+This is issue 14 of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
