--- a/journal/201905.md
+++ b/journal/201905.md
@@ -109,7 +109,7 @@ Dev activity stats for May: {} active PRs, {} master commits, {} added and {} de
 
 ## People
 
-Welcome to new first time contributors with code merged to master branches: duyenemdo ([dcrandroid](https://github.com/decred/dcrandroid/commit/dec2542ebdf0485acc52e00091ad3ee4b205155a)), njirap ([dcrdata](https://github.com/decred/dcrdata/commit/796bd32f3b0c18c84a06bd04d2be478c6815e9d2)),  Nelson Dornelas Jr ([politeiagui](https://github.com/decred/politeiagui/commit/62a2903d01e2ebac2bd203abb5e1347262b47999)), Youssef Boukenken ([dcrtime](https://github.com/decred/dcrtime/commit/d6f4a5134c7ca78c3c2b2a849ad9c74de064656e)) and DominicTing ([dcrweb](https://github.com/decred/dcrweb/commit/090c431cdeceab6ce5077fcfaa6c85c3757a4018))
+Welcome to new first time contributors with code merged to master branches: duyenemdo ([dcrandroid](https://github.com/decred/dcrandroid/commit/dec2542ebdf0485acc52e00091ad3ee4b205155a)), njirap ([dcrdata](https://github.com/decred/dcrdata/commit/796bd32f3b0c18c84a06bd04d2be478c6815e9d2)),  Nelson Dornelas Jr ([politeiagui](https://github.com/decred/politeiagui/commit/62a2903d01e2ebac2bd203abb5e1347262b47999)) and Youssef Boukenken ([dcrtime](https://github.com/decred/dcrtime/commit/d6f4a5134c7ca78c3c2b2a849ad9c74de064656e))
 
 ## Governance
 
