--- a/journal/201905.md
+++ b/journal/201905.md
@@ -117,32 +117,25 @@ In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDct
 
 Below is the proposal status as of Jun 1:
 
-{WIP}
-
 6 new proposals were submitted:
 
-[Block Header Commitments Consensus Change](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58) by @davecgh
-[Ditto Communications Proposal for Decred: Phase 2](https://proposals.decred.org/proposals/52ea110ea061c72d3b31ed2f5635720b212ce5e3eaddf868d60f53a3d18b8c04) by @lizbagot
-[Decred Open Source Research proposal: Phase 2](https://proposals.decred.org/proposals/67de0e901143400ae2f247391c4d5028719ffea8308fbc5854745ad859fb993f) by @richard-red
-[Decentralized Exchange Specification Document](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32) by @jy-p
+[Block Header Commitments Consensus Change](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58) by @davecgh, a proposal to move forward with a DCP and on chain consensus rules change proposal. This change would alter how block head commitments work in a way which allows for a more secure implementation of SPV. The proposal projects a cost of $20,000 to prepare the software and DCP, to be paid from the core development budget
 
-[Incentivizing BD Evangelists within the Decred Ecosystem](https://proposals.decred.org/proposals/cb446a469987d6603d93f442ef0d4e45bacbea47a72b5ce89f9c3cac3868d627) by @betterfuture
+[Ditto Communications Proposal for Decred: Phase 2](https://proposals.decred.org/proposals/52ea110ea061c72d3b31ed2f5635720b212ce5e3eaddf868d60f53a3d18b8c04) by @lizbagot, a proposal to continue retaining the services of Ditto at $25k/month in DCR for a further 6 months. The proposal includes a recap of the last 6 months and details a 5 pronged approach for the next 6 months.
 
-[A Journey to the Future of Work- Telling the DCR story through Politeia](https://proposals.decred.org/proposals/b9f342a0f917abb7a2ab25d5ed0aca63c06fe6dcc9d09565a9cde3b6fe7e6737) by @jer979
-8,787 Yes votes, 9,284 No votes (48.6% Yes) - voter participation of 43.9%, support from 21% of tickets.
+[Decred Open Source Research proposal: Phase 2](https://proposals.decred.org/proposals/67de0e901143400ae2f247391c4d5028719ffea8308fbc5854745ad859fb993f) by @richard-red, a proposal to continue funding the research program with $20,000, estimated to keep it going for 6 months. The proposal includes a report on the first 6 months activities, and a description of how the approach going forward will differ. The proposal also invites ideas about research projects in comments.
 
+[Decentralized Exchange Specification Document](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32) by @jy-p, a proposal to move forward with the DEX by producing a "full RFC-style specification"of the processes involved. The specification would be completed by Company0 working with @chappjc, @buck54321 and @jholdstock, at a cost of up to $20,000. 
 
+[Incentivizing BD Evangelists within the Decred Ecosystem](https://proposals.decred.org/proposals/cb446a469987d6603d93f442ef0d4e45bacbea47a72b5ce89f9c3cac3868d627) by @betterfuture, a proposal to establish a "Devred Evangelists" business development team that would arrange co-development deals with partner organizations, and be rewarded with a percentage of any DCR contributed by those partners to the Treasury. The proposal was edited by @betterfuture on May 31 to say that it will be abandoned and re-submitted as two separate proposals, based on community feedback.
 
-Voting concluded for 3 proposals:
+[A Journey to the Future of Work- Telling the DCR story through Politeia](https://proposals.decred.org/proposals/b9f342a0f917abb7a2ab25d5ed0aca63c06fe6dcc9d09565a9cde3b6fe7e6737) by @jer979, a proposal to  write an article about Politeia and the author's proposal submission journey. This proposal initially appeared to have good support, but after [comments](https://proposals.decred.org/proposals/b9f342a0f917abb7a2ab25d5ed0aca63c06fe6dcc9d09565a9cde3b6fe7e6737/comments/29) about @jer979's past relationship with IOTA lost some of that support and was ultimately rejected with 48.6% approval (and voter participation of 44%, the second highest participation rate in Politeia's history).
 
-[Decentralize Treasury Spending](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) - voting finished May 13 - 43 comments ()
-8,958 Yes votes, 231 No votes (97.5% Yes) - voter participation of 22.5%, support from 22% of tickets.
+1 additional proposal finished voting and was approved.
 
+[Decentralize Treasury Spending](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) by @moo31337, proposed a method of decentralizing Treasury spending with a monthly on chain vote to approve payments to contractors. It was approved with 97.5% Yes votes.
 
-
-{high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
-
-{pidigest 15,16}
+Politeia Digest has more in depth coverage of these proposals and associated developments, Issue [15](https://github.com/RichardRed0x/politeia-digest/blob/master/issue-015.md) and [16](https://github.com/RichardRed0x/politeia-digest/blob/master/issue-016.md) were released in May.
 
 ## Network
 
@@ -255,7 +248,7 @@ Selected articles:
 
 Translations:
 
-* {}
+* https://github.com/raedahgroup/decred-journal/tree/master/vietnamese
 * March Journal translated to Arabic by arij and reviewed by abdulrahman4 https://insaf01.github.io/decred-journal-ar/journal/201903.html>
 
 Videos:
@@ -271,6 +264,7 @@ https://podcasts.apple.com/us/podcast/decred-everything-you-ever-wanted-to-know-
 
 * https://twitter.com/TomCasano/status/1125456456638242816 {get direct link if possible}
 * https://www.listennotes.com/podcasts/crypto-101-with/horizen-decred-casino-coin-101-o_stJI2LaQC/
+* https://www.cryptobasicpodcast.com/home/180
 
 ## Community Discussions
 
