--- a/journal/201905.md
+++ b/journal/201905.md
@@ -221,25 +221,27 @@ Ditto's May achievements:
 
 Attended:
 
-* {}
-CriptoLatinFest May 18th and 19th https://twitter.com/Decred_ES/status/1128337171558146050
-La Conexion May 20th and 21st https://twitter.com/Decred_ES/status/1128340018362310659
-BitcoinDay Uruguay May 23th and 24th https://twitter.com/Decred_ES/status/1128342052243169282
-* <https://twitter.com/wanbihou/status/1129467061220941824>
-* https://twitter.com/raedahgroup/status/1131350753841418241 Beansgum lagos
-* 
+* May 4-5 - [VII Bitconf](https://www.bitconf.com.br/portal/vii-bitconf/) - São Paulo, Brazil. Decred was well [represented](https://twitter.com/Decred_BR/status/1124763200984158208) at this event with around 1,200 participants
+* May 7 - [ThatChannel](http://meetu.ps/e/GHQMZ/Hh1YR/a) - Toronto, Canada. @michael2xl and @zubairzia [presented](https://twitter.com/Decred_CA/status/1126168172472733696) Decred. [Video](https://www.twitch.tv/videos/421823667?t=00h29m48s)
+* May 15 - [Atomic Swap](https://www.theblockcrypto.com/sponsored/atomic-swap-presented-by-decred-and-zebpay/) - NYC, USA. Decred co-sponsored the Atomic Swap event organized by The Block. @jy-p spoke on a panel about "The idealist's dilemma".
+* May 17 - [Global Blockchain Forum](https://twitter.com/wanbihou/status/1129467061220941824) - Hangzhou, China. @dominic presented Decred.
+* May 18 - Chengdu, China. @dominic [represented](https://twitter.com/wanbihou/status/1129750422611202048) Decred at an event with a lot of miners present.
+* May 18-19 - [CriptoLatinFest](https://github.com/heyvj/decred-events/blob/master/reports/20190518-criptolatinfest-bogota-colombia.md) - Bogota, Colombia. @elian presented Decred at this event with around 300 attendees. The event attracted attendees who were more interested in speculation than the fundamentals of the technology.
+* May 20-21 - [La Conexión](https://github.com/heyvj/decred-events/blob/master/reports/20190520-laconexion-medellin-colombia.md) - Medellín, Colombia. @elian presented Decred at this event with around 200 attendees, an international mixture of  investors, entrepreneurs and cryptocurrency professionals. This event attracted people who were interested in understanding how blockchain technology works and building it into their business.
+* May 23 - [Decred AMA](https://twitter.com/DecredCN/status/1131487833137397760) - online. This AMA was organized by Cobo wallet and @dominic answered questions. The AMA led [300](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15587188721553ZAajQ:decred.org?via=decred.org&via=matrix.org) people to join the Decred Chinese telegram channel. 
+* May 24 - [Bitcoinday](https://github.com/heyvj/decred-events/blob/master/reports/20190524-bitcoinday-montevideo-uruguay.md) - Montevideo, Uruguay. The event had around 200 attendees and @elian represented Decred on a panel on blockchain and business, and also ran a workshop about dcrtime and Politeia attended by around 20 people. 
+* May 24-25 - [Blockchain Nigeria Group](http://blockchainnigeria.group/) - Lagos, Nigeria. @collins and some other Raedah developers represented Decred at the event and delivered a presentation.
+* May 28 - [Gophers Silesia](https://www.meetup.com/GophersSilesia/events/260673565/) - Katowice, Poland. @kozel [delivered](https://twitter.com/Decred_PL/status/1133452876716621824) a talk about Decred which has been recorded, video to come. 
 
 Upcoming:
 
-* {}<https://www.reddit.com/r/decred/comments/bsgwhv/decred_berlin_meetup_wed_5_june_2019/>
+* Jun 5 - [Decred x Blueyard meetup](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-tickets-61631192556) - Berlin, Germany. @jholdstock will give a presentation and Q&A about Decred. @Haon will also be in attendance.
 
-{announcements from events people}
+* Jun 12 - [Meetup](http://bit.ly/DecredDENMeetup) - Washington DC, USA - hosted by @akinsawyerr
 
 ## Media
 
 @jy-p participated in an [AMA](https://www.reddit.com/r/CryptoCurrency/comments/bjubwv/ama_decred_project_lead_jake_yocompiatt/) on the /r/cryptocurrency subreddit, answering 18 questions from /r/cryptocurrency subscribers.
-
-{ratings news}
 
 Selected articles:
 
@@ -316,6 +318,8 @@ Twitter: {interesting threads}
 <https://twitter.com/BradyDale/status/1128670013974622208>
 
 https://twitter.com/RichardRed0x/status/1127280791002787843
+
+https://twitter.com/lukebp_/status/1132310565093879808
 
 
 
