--- a/journal/201905.md
+++ b/journal/201905.md
@@ -254,7 +254,7 @@ Selected articles:
 
 Translations:
 
-* All issues of the Journal have been [translated](https://github.com/raedahgroup/decred-journal/tree/master/vietnamese) to Vietnamese by @duyenemdo, since last mention in March the translations have been extended further into the Journal's history, now going all the way back to issue 1.
+* All issues of the Journal have been [translated](https://github.com/raedahgroup/decred-journal/tree/master/vietnamese) to Vietnamese by @duyenemdo, since last mention in March the translations have been extended further into the Journal's history, now going all the way back to issue 1. Now Vietnamese leads by the number of DJ translations and is the only language that has all issues. {April is still WIP as of 0602; ask @raedah for extra comments if any}
 * March Journal [translated](https://insaf01.github.io/decred-journal-ar/journal/201903.html) to Arabic by @arij and reviewed by @abdulrahman4
 
 Videos:
@@ -342,6 +342,10 @@ The [Open Money Initiative](https://medium.com/@openmoneyinitiative/announcing-t
 A Bitcoin Cash hard fork on May 15 was beset by [several](https://blog.bitmex.com/the-bitcoin-cash-hardfork-three-interrelated-incidents/) issues and in the ensuing chaos, 3,391 BCH (~$1.35 million) were double spent. A bug with Bitcoin ABC led to invalid transactions filling up the mempool and a series of empty blocks being mined. Some miners began mining blocks on the pre-hardfork chain, causing a chain split. Immediately after the bug was resolved, a 2 block reorg occurred in which funds that the hardfork made spendable by any miners were double spent. It seems likely the dominant BCH miners reorged the chain to remove transactions in which these coins were claimed by another miner.
 
 Poloniex has been busy in May, delisting [Peercoin](https://talk.peercoin.net/t/team-update-28-poloniex-delisting-legal-risks-memo-exchange-expansion-plans/9278) and a number of other cryptocurrencies, "[geofencing](https://medium.com/circle-trader/poloniex-to-stop-offering-trading-of-9-assets-to-us-customers-all-assets-remain-available-to-b4c5703c0e9)" DCR and 8 other cryptocurrencies so that US-based customers cannot trade it, and   [announcing](https://medium.com/circle-trader/cosmos-atom-staking-is-coming-to-poloniex-d587d6c6615d) support for Cosmos staking. The decision to geofence DCR on the basis of regulatory uncertainty is perplexing, given the many [reasons](https://www.reddit.com/r/decred/comments/ahuawl/decred_launch_security_laws/eeiaa0n/) why DCR should not be considered a security and concurrent support for ICO projects that seem more likely to be deemed securities. In a follow up [post](https://blog.circle.com/2019/05/20/us-crypto-policy-needs-to-change/), Circle CEO explained that the move is triggered by the [recent guidance](https://www.sec.gov/news/public-statement/statement-framework-investment-contract-analysis-digital-assets) from the SEC. Notably, the linked page says "This framework represents Staff views and is not a rule, regulation, or statement of the Commission.  The Commission has neither approved nor disapproved its content. This framework, like other Staff guidance, is not binding on the Divisions or the Commission.". Another [post](https://blog.circle.com/2019/05/23/our-take-interpreting-recent-signals-from-us-regulatory-agencies/) from Circle further elaborated on their position and complained about the difficulties caused by uncertainty from US regulators.
+
+In response to the confusing digital assets framework, Kin Foundation [started](https://twitter.com/ResearchCircle/status/1134541879675166722) a Defend Crypto [initiative](https://www.defendcrypto.org/) by which they collect donations to take SEC to court.
+
+As of Apr 30, Tether was only backed by 74% as told by their lawyer https://www.coindesk.com/tether-lawyer-confirms-stablecoin-74-percent-backed-by-cash-and-equivalents
 
 Binance suffered a security [breach](https://binance.zendesk.com/hc/en-us/articles/360028031711) which resulted in the loss of 7,000 BTC. The breach was a result of hackers obtaining a large number of user API keys and 2FA codes. On twitter, @JeremyRubin [suggested](https://twitter.com/JeremyRubin/status/1125919526485254144) that if Binance released their private keys for the hacked coins (or a subset) they could coordinate a reorg to undo the theft. CZ was participating in an AMA soon after the breach was announced and mentioned that he was considering this proposition. This sparked uproar on crypto twitter, with much discussion of whether this was a viable or advisable approach. The subject also received some in depth [treatment](https://research.circle.com/weekly-recaps/weekly-crypto-recap-to-reorg-or-not-to-reorg). Ultimately CZ decided [not](https://twitter.com/cz_binance/status/1125996194734399488) to pursue an attempted reorg because it would damage BTC's credibility and potentially split the chain/community. The losses would instead be covered by the Binance safu fund.
 
