Polish Dev/dcrd

--- a/journal/201905.md
+++ b/journal/201905.md
@@ -8,27 +8,13 @@
 
 ## Development
 
-{add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans}
+[dcrd](https://github.com/decred/dcrd): merged bug fixes, improved test coverage and test infrastructure.
 
-[dcrd](https://github.com/decred/dcrd): {}
+Work started to [port](https://github.com/decred/dcrd/pulls?q=is%3Apr+updated%3A2019-05-01..2019-05-31+port) several rearrangements from upstream btcd in order to reduce coupling and split blockmanager and rpcserver into their own packages.
 
-Merged:
-* wire: Add tests for MsgCFHeaders.https://github.com/decred/dcrd/pull/1732 (simple test added..?)
-* rpctest: Allow custom miner on voting wallet: https://github.com/decred/dcrd/pull/1751 (significant to end user or just speeding up simnet for devs?)
-* TravisCI: Disable race detector.: https://github.com/decred/dcrd/pull/1749 (optional feature to speed up testing)
-* peer: Prevent last block height going backwards.https://github.com/decred/dcrd/pull/1747 (can't parse. bug fix?)
-* wire: Add tests for MsgCFHeaders.: https://github.com/decred/dcrd/pull/1732
+Another active area was [mining code](https://github.com/decred/dcrd/pulls?q=is%3Apr+updated%3A2019-05-01..2019-05-31+mining) that is undergoing a series of code improvements and performance optimizations, e.g. to [remove getblocktemplate](https://github.com/decred/dcrd/pull/1736) and to [require](https://github.com/decred/dcrd/pull/1739) a valid template address. 
 
-Open:
-* blockchain: update CalcBlockSubsidy.: https://github.com/decred/dcrd/pull/1750 (performance optimization?)
-* May saw a major optimization for PoW miners, with an [overhaul](https://github.com/decred/dcrd/pull/1748) of the background template generator (the function that miners call to receive templates to create blocks from). Currently, new miners not familiar with the intricacies of Decred voting will occasionally produce valid blocks with the minimum 3 votes from PoS voters (out of a possible 5). This is bad for PoW miners, who get a reduced subsidy for including fewer votes. This is also undesirable for PoS stakers, who may not receive the PoS reward, despite having voted, simply due to propagation delay. To address this, the background template generator has been updated to add support for intelligent vote propagation, as well as a number of other features, such as better handling of chain reorganization to alternative blocks, a subscription that provides miners a stream of template updates, and consideration of the synchronization state as part of determining if the chain is current. It should be noted that this work only implements the infrastructure and does not yet expose this functionality in production.  (this is potentially the biggest update, so have taken a stab at rewording davecgh's long commit message)
-* mining: require a valid template address: https://github.com/decred/dcrd/pull/1739 (minor update, not sure if relevant)
-* mining: require a valid template address: https://github.com/decred/dcrd/pull/1736 (looks related to larger change above)
-* rpcserver: refactor listener logic to server. https://github.com/decred/dcrd/pull/1734 (port from btcd, might be notable)
-* blockmanager: remove serverPeer from blockmanager completely.https://github.com/decred/dcrd/pull/1735 (port from btcd, might be notable)
-* rpcserver: don't use activeNetParams. https://github.com/decred/dcrd/pull/1733 (port from btcd, might be notable)
-* connmgr: Add DialContext API https://github.com/decred/dcrd/pull/1729 (not sure if important)
-
+A major pending change to mining code that deserves a special mention is an [overhaul](https://github.com/decred/dcrd/pull/1748) of the background template generator (the function that miners call to receive templates to create blocks from). Currently, miners not familiar with the intricacies of Decred voting will occasionally produce valid blocks with the minimum 3 PoS votes, out of a possible 5. This is bad for PoW miners, who get a reduced subsidy for including fewer votes. This is also undesirable for PoS voters, who may not receive the PoS reward, despite having voted, simply due to propagation delay. To address this, the background template generator has been updated to add support for intelligent vote propagation, as well as a number of other features, such as better handling of chain reorganization to alternative blocks, a subscription that provides miners a stream of template updates, and consideration of the synchronization state as part of determining if the chain is current. It should be noted that this work only implements the infrastructure and does not yet expose this functionality in production.
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
