Polish Dev/docs,dcrweb

--- a/journal/201905.md
+++ b/journal/201905.md
@@ -62,14 +62,13 @@ Overall port progress can be tracked in [this issue](https://github.com/davecgh/
 
 {what is 'dcrrates' and how is it different from 'exchanges'?}
 
-[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
-
 [docs](https://github.com/decred/dcrdocs):
 
-* new [Security](https://docs.decred.org/advanced/general-security/) page
-* Updated [Transaction Details](https://docs.decred.org/advanced/transaction-details/) page adds more documentation for Decred-specific transaction types and a detailed [example transaction](https://github.com/decred/dcrdocs/pull/937). 
+* Added new [Security](https://docs.decred.org/advanced/general-security/) page that captures a lot of wisdom about secure computing, including system setup and OPSEC.
+* Updated [Transaction Details](https://docs.decred.org/advanced/transaction-details/) page adds more documentation for Decred-specific transaction types and a detailed [example transaction](https://github.com/decred/dcrdocs/pull/937).
+* [Updated](https://github.com/decred/dcrdocs/pull/940/files) the [Consensus Vote Archive](https://docs.decred.org/governance/consensus-rule-voting/consensus-vote-archive/) page with better flow and more data.
 
-[decred.org](https://github.com/decred/dcrweb): {}
+[decred.org](https://github.com/decred/dcrweb): [Updated](https://github.com/decred/dcrweb/pull/662) the [Roadmap](https://decred.org/roadmap/) page, minor content and UI fixes.
 
 [dcrpool](https://github.com/decred/dcrpool): New PoW mining pool software is available. {more detail, how is it better than what mining pools use today}
 
