Adding dev stats
Note that do not have `Contributions came from {}-{} developers per repository.` filled out. Presumably lustofsa has done this in the past?

--- a/journal/201905.md
+++ b/journal/201905.md
@@ -78,7 +78,7 @@ Other:
 * dcrd synced on RISC-V QEMU. RISC-V is a hope for a less horrible CPU architecture. https://twitter.com/marco_peereboom/status/1128763544118362112
 * bug bounty update https://www.reddit.com/r/decred/comments/br9r27/a_new_status_update_has_been_added_to_the_decred/
 
-Dev activity stats for May: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({})) {chart link is optional, drop if not ready}
+Dev activity stats for May: 88 active PRs, 272 master commits, 52249 added and 56998 deleted lines spread across 15 repositories. Contributions came from {}-{} developers per repository. ([chart]({})) {chart link is optional, drop if not ready}
 
 ## People
 
